Refactor: Replace AddressBook with NetConnect
This commit transitions our application from the AddressBook into
NetConnect.

- Replaced AddressBook with NetConnect throughout the codebase.
- Updated unit tests to reflect the new names
- Conducted thorough testing to ensure compatibility and performance benchmarks are met.